# sonotheia-examples

./: .cursorrules  .env.example  .gitignore  .gitignore.bak.1768073040  .pre-commit-config.yaml  AGENT_KNOWLEDGE_BASE.md  CODEX_ENV_SETUP.md  CODE_REVIEW_SUMMARY_2026-01-23.md  COMPREHENSIVE_HARDENING_PLAN.md  CONTRIBUTING.md  DESIGN_AUDIT_REPORT_2026-01-24_COMPREHENSIVE.md  DESIGN_AUDIT_SUMMARY_2026-01-24.md  DOCUMENTATION_REVISION_PLAN.md  DOCUMENTATION_REVISION_SUMMARY_2026-01-24.md  EXECUTIVE_SUMMARY.md  INDEX.md  INTEGRATION_SUMMARY.md  LAUNCH_ENHANCEMENT_SUMMARY.md  NOTES.md  QUICK_ACTION_PLAN.md  README.md  REFACTORING_SUMMARY.md  REVIEW_SUMMARY.md  ROADMAP.md  SECURITY.md  SOURCES.md  TEST_COVERAGE_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_IMPROVEMENTS_2026-01-23.md  TEST_COVERAGE_QUICK_START.md  XLAYER_STATUS.md  fix_d200.py  fix_d200_safe.py  launcher.bat  launcher.sh  mypy.ini  pyproject.toml  quicktest.sh
evaluation/: AGENT_KNOWLEDGE_BASE.md  CONTRIBUTING.md  EXTENSIBILITY.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  LICENSE  NOTES.md  README.md  STRATEGY_SUMMARY.md  pyproject.toml
evaluation/config/: README.md  indicators.yaml  perturbations.yaml  thresholds.yaml
evaluation/documentation/: INTERPRETING_RESULTS.md  SHOWCASE_QUICKSTART.md  WORKFLOWS.md
evaluation/scripts/: generate_demo_audio.py
evaluation/src/audio_trust_harness/: __init__.py  __main__.py  (+5 more)
evaluation/tests/: conftest.py  test_adapters.py  test_audio.py  test_batch.py  test_cli_demo.py  test_config.py  test_consistency.py  test_indicators.py  test_integration.py  test_json_safety.py  test_perturb.py  test_policy.py  test_showcase.py  test_summary.py
(+205 files in other folders)
