[project]
name = "audio-trust-harness"
version = "0.1.0"
description = "Audio stress-test harness for indicator robustness evaluation"
authors = [{name = "Doron", email = "doron@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "librosa>=0.10.0",
    "pydub>=0.25.1",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "resampy>=0.4.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806"]  # Line too long, variable naming (allow scipy conventions like Zxx)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Keep optional for low friction

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "soundfile",
    "pydub",
    "librosa.*",
    "pandas",
    "plotly.*",
    "resampy"
]
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
